--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~9.1.1",
+    "@angular/compiler-cli": "~9.1.1",
     "@angular/animations": "~9.1.1",
+    "@angular/cdk": "^11.0.3",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
@@ -19,9 +23,18 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@types/chart.js": "^2.9.29",
+    "angular-bootstrap-md": "^10.1.1",
+    "animate.css": "^4.1.1",
+    "chart.js": "^2.5.0",
+    "express": "^4.17.1",
+    "hammerjs": "^2.0.8",
+    "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "typescript": "~3.8.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
@@ -43,5 +56,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
+  },
+  "engines": {
+    "node": "12.16.0",
+    "npm": "6.14.11"
   }
 }
